# Cpp-Library-Collection

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cpp-Library-Collection.sln  LICENSE  README.md  Visual_Studio_Ready.md  Visual_Studio_Setup.md
Cpp-Library-Collection/: Cpp-Library-Collection.cpp  Cpp-Library-Collection.vcxproj  Cpp-Library-Collection.vcxproj.filters  Date.h  InputValidate.h  MyDate.h  MyPeriod.h  MyString.h  MyUtil.h  Period.h  String.h  Util.h
Examples/: main.cpp
Lib/: Date.h  InputValidate.h  Period.h  String.h  Util.h
Tests/: TestRunner.h
docs/: API_REFERENCE.md  CONTRIBUTING.md  EXAMPLES.md  INSTALLATION.md  LICENSE.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  TESTING.md
examples/: CMakeLists.txt  basic_demo.cpp
include/MyLib/: MyDate.h  MyInputValidate.h  MyPeriod.h  MyString.h  MyUtil.h
src/: MyLib.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/MyLib/: test_MyDate.cpp  test_MyPeriod.cpp  test_MyString.cpp  test_MyUtil.cpp
